--- a/cvaucherMVC/src/main/webapp/resources/css/styles.css
+++ b/cvaucherMVC/src/main/webapp/resources/css/styles.css
@@ -139,3 +139,17 @@ footer {
 .caption{
 	 background-color: #5cb85c;
 }
+
+.credenciales{
+    float: right;
+    font-size: large;
+    
+}
+.credenciales2{
+	float: right;
+	color:red;
+	font-style:italic;
+	font-family:fantasy;
+	font-stretch: narrower;
+	
+}
